--- a/env.example
+++ b/env.example
@@ -1,3 +1,3 @@
 # Used for generating absolute URLs in metadata/OG.
-# In production, set this to your canonical site URL (e.g. https://radicazz.com).
+# In production, set this to your canonical site URL (e.g. https://bandland.com).
 NEXT_PUBLIC_SITE_URL=
