feat: add initial admin panel

--- a/env.example
+++ b/env.example
@@ -1,3 +1,9 @@
+# Admin Panel
+# Generate hash: npx bcrypt-cli hash "your-password" 12
+ADMIN_PASSWORD_HASH=
+AUTH_SECRET=
+AUTH_URL=
+
 # Used for generating absolute URLs in metadata/OG.
 # In production, set this to your canonical site URL (e.g. https://bandland.com).
 NEXT_PUBLIC_SITE_URL=
