feat support external content storage and update admin forms

--- a/env.example
+++ b/env.example
@@ -7,3 +7,11 @@ AUTH_URL=
 # Used for generating absolute URLs in metadata/OG.
 # In production, set this to your canonical site URL (e.g. https://bandland.com).
 NEXT_PUBLIC_SITE_URL=
+
+# Optional: store content JSON outside the repo (recommended for VPS deploys).
+# Example: /var/lib/bandland/content
+CONTENT_DIR=
+
+# Optional: override where backups (content/.history) are stored.
+# Defaults to CONTENT_DIR/.history when not set.
+CONTENT_HISTORY_DIR=
